<resources>
    <string name="appName">FoodPinions</string>
    <string name="enterAMessage">Enter a message</string>
    <string name="send">Send</string>
    <string name="test">Test</string>
    <string name="openBudget">Open budget</string>
    <string name="newFoodPinion">New FoodPinion</string>
    <string name="search">Search</string>
    <string name="dish">Dish</string>
    <string name="comment">Comment</string>
    <string name="rating">Rating</string>
    <string name="searchFoodPinions">Search FoodPinion</string>
    <string name="createFoodPinion">Create FoodPinion</string>
    <string name="editFoodPinionActivity">EditFoodPinionActivity</string>
    <string name="restaurant">Restaurant</string>
    <string name="editFoodPinion">Edit FoodPinion</string>
    <string name="editButtonDescription">An edit icon</string>
    <string name="restaurantHint">e.g. Pizza Express</string>
    <string name="dishHint">e.g. Garlic bread</string>
    <string name="commentHint">e.g. Too small</string>
    <string name="foodPinionLabel">Enter a FoodPinion</string>
    <string name="foodPinionHint">e.g. Pizza Express</string>
    <string name="empty_table_string">Nothing matches your search.\nTry creating a new FoodPinion</string>
</resources>
