<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_food_pinion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".activities.EditFoodPinionActivity">

    <EditText
        android:id="@+id/restaurant_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/restaurant"
        android:inputType="textVisiblePassword" />

    <EditText
        android:id="@+id/dish_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/dish"
        android:inputType="textVisiblePassword" />

    <EditText
        android:id="@+id/comment_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/comment"
        android:inputType="textVisiblePassword" />

    <Button
        android:id="@+id/createFoodPinion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="confirmFoodPinion"
        android:text="@string/createFoodPinion"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/editButtonImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/editButtonDescription"
        android:visibility="invisible" />
</LinearLayout>
